<resources>
    <string name="app_name">Messanger</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="AllsText">Все %s</string>
    <string name="yourProfileDrawerMessageMain">Мой профиль</string>
    <string name="createGroupDrawerMessageMain">Создать группу</string>
    <string name="contactsDrawerMessageMain">Контакты</string>
    <string name="callsDrawerMessageMain">Звонки</string>
    <string name="peopleAroundDrawerMessageMain">Люди рядом</string>
    <string name="electsDrawerMessageMain">Избранное</string>
    <string name="settingsDrawerMessageMain">Настройки</string>
    <string name="inviteFrensDrawerMessageMain">Пригласить друзей</string>
    <string name="posibilityTelegramDrawerMessageMain">Возможности Telegram</string>
    <string name="namedrawerMessageMain">%s</string>
    <string name="addAccountDrawerMessageMain">Добавить аккаунт</string>
    <string name="start_messaging">начните обмениваться сообщениями</string>
    <string name="numberPhoneTextAuthAndRegFragment">Номер телефона</string>
    <string name="checkYourCountryCodeText">Проверьте код страны и введите свой номер телефона.</string>
    <string name="countryText">Страна</string>
    <string name="numberPhoneText">Номер телефона</string>
    <string name="etPlusText">+</string>
    <string name="tvEnterCodeInSms">Введите код из смс</string>
    <string name="btnEnterCode">Отправить код</string>
    <string name="tvNewContact">Новый контакт</string>
    <string name="tvSortToTimeEnter">Сортировка по времени захода</string>
    <string name="tvPhoneLabel">Телефон</string>
    <string name="tvAboutYourself">О себе</string>
    <string name="tvnameOfuser">Имя пользователя</string>
    <string name="tvYourNameEditProfile">Ваше имя</string>
    <string name="etHintName">Имя</string>
    <string name="etHintSecondName">Фамилия</string>
    <string name="tvWhoseWillBeAddToGroup">Кого бы вы хотели пригласить?</string>
    <string name="accountTVSETTINGS">Аккаунт</string>
    <string name="infoTVPROFILE">Информация</string>
    <string name="settingsTVSETTINGS">Настройки</string>
    <string name="settingsOfChatsSETTINGSTEXT">Настройки чатов</string>
    <string name="textSizeOfMessangeSETTINGSOFCHATS">Размер текста сообщений</string>
    <string name="FoldersWithChatTEXTSETTINGS">Папки с чатами</string>
    <string name="createNewFolderBUTTONTEXT">Создать новую папку</string>
    <string name="FoldersWithChatsLargeText">Вы можете создать папки с нужными чатами и переключаться между ними</string>
    <string name="etNameOfFolderHintText">Название папки</string>
    <string name="ChooseChatsTextView">Выбранные чаты</string>
    <string name="addChatsButtonText">Добавить чаты</string>
    <string name="SearchUsersAndGroupEditText">Поиск пользователей и групп</string>
    <string name="saveButtonTextNEWFOLDER">Сохранить</string>
    <string name="SearchEditText">Поиск</string>
</resources>