<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/grafitnoCherni"
    tools:context=".FoldersWithChatsFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize"
        android:id="@+id/toolbar"
        android:background="@color/grafitnoGray"/>

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:background="@android:color/transparent"
        android:layout_gravity="center"
        android:src="@drawable/folders_image"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/FoldersWithChatsLargeText"
        android:textColor="@color/startsTextColor"
        android:layout_gravity="center"
        android:textSize="18sp"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="15dp"
        android:background="@color/grafitnoGray">
        <TextView
            android:paddingStart="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/FoldersWithChatTEXTSETTINGS"
            android:textColor="@color/floatingColorBackground" />
        <Button
            android:paddingStart="20dp"
            android:id="@+id/btnCreateNewFolder"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@android:color/transparent"
            android:textAllCaps="false"
            android:gravity="center|start"
            android:textColor="@color/floatingColorBackground"
            android:text="@string/createNewFolderBUTTONTEXT"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:background="@color/grafitnoCherni"/>
        <androidx.recyclerview.widget.RecyclerView
            android:paddingStart="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rvChatsFolders"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
    </LinearLayout>

</LinearLayout>