<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grafitnoCherni">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/grafitnoCherni"
        tools:context=".AuthAndRegMenuFragment">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/numberPhoneTextAuthAndRegFragment"
            android:layout_gravity="top|center"
            android:layout_marginTop="120dp"
            android:textSize="22sp"/>

        <TextView
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:textColor="@color/grayTextColor"
            android:layout_gravity="top|center"
            android:gravity="center"
            android:textSize="14sp"
            android:text="@string/checkYourCountryCodeText" />

        <Button
            android:id="@+id/btnCountryChooseAuthAndRegFragment"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAllCaps="false"
            android:textColor="@color/grayTextColor"
            android:text="@string/countryText"
            android:textSize="20sp"
            android:paddingLeft="16dp"
            android:gravity="start|center"
            android:drawableRight="@drawable/icon_right"
            android:background="@drawable/btn_country_choose_auth_and_reg_fragment"/>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_country_choose_auth_and_reg_fragment"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvPlus"
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:layout_marginStart="45dp"
                    android:text="@string/etPlusText"/>

                <EditText
                    android:id="@+id/editText1"
                    android:layout_width="43dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:inputType="number"/>

                <EditText
                    android:id="@+id/editText2"
                    android:layout_width="210dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:inputType="number"
                    android:hint="000 000 00 00"
                    android:textColorHint="@color/grayTextColor"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/flBtnRegOrAuth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|center"
        android:backgroundTint="@color/floatingColorBackground"
        android:src="@drawable/icon_straw_right"
        android:layout_margin="20dp"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
