<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".YourProfileFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/appBarLayout"
        app:expanded="false">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="350dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="@color/grafitnoGray">

            <ImageView
                android:id="@+id/ivAppBar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax" />

            <TextView
                android:id="@+id/tvNameUser1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|start"
                android:layout_margin="20dp"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold"/>

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin">
                <Button
                    android:id="@+id/btnBackProfile"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_gravity="start|center"
                    android:background="@android:color/transparent"
                    android:drawableLeft="@drawable/back_img_btn" />

                <Button
                    android:id="@+id/btnEditProfile"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_gravity="end|center"
                    android:background="@android:color/transparent"
                    android:drawableRight="@drawable/floating_button_pencil"
                    android:layout_marginEnd="10dp"/>

            </com.google.android.material.appbar.MaterialToolbar>


        </com.google.android.material.appbar.CollapsingToolbarLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/grafitnoGray"
            android:orientation="horizontal">
            <ImageButton
                android:id="@+id/imgBtnProfilePicture"
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:background="@drawable/rounded_image"
                android:scaleType="centerCrop"
                android:clipToOutline="true"/>
            <TextView
                android:id="@+id/tvNameUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="@color/white"
                android:textSize="23sp"/>
        </LinearLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grafitnoCherni"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_margin="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/infoTVPROFILE"
                android:textColor="@color/floatingColorBackground"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/tvPhoneUser"
                android:layout_marginStart="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="15sp"/>
            <TextView
                android:layout_marginStart="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvPhoneLabel"
                android:textColor="@color/startsTextColor"
                android:textSize="11sp"/>

            <TextView
                android:id="@+id/tvAboutYours"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/white"
                android:textSize="13sp"/>
            <TextView
                android:layout_marginStart="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvAboutYourself"
                android:textColor="@color/startsTextColor"
                android:textSize="11sp"/>

            <TextView
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/white"
                android:textSize="13sp"/>
            <TextView
                android:layout_marginStart="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvnameOfuser"
                android:textColor="@color/startsTextColor"
                android:textSize="11sp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:background="@color/newGrafit"/>
        </LinearLayout>



    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="43dp"
        android:layout_height="43dp"
        android:id="@+id/fab"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="120dp"
        android:layout_gravity="end"
        android:src="@drawable/icon_add_account"
        android:backgroundTint="@color/floatingColorBackground"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>